force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>Object for tracking Service Department Work Orders</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>Job #{YY}-{000}</displayFormat>
        <label>Welco Work Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>