force-app/main/default/objects/Work_Order__c/fields/Account_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Alias__c</fullName>
    <formula>Account__r.Owner.Alias</formula>
    <label>Account Owner Alias</label>
    <type>Text</type>
</CustomField>