force-app/main/default/objects/Work_Order__c/fields/Actual_Weeks_to_Complete_Repair__c.field-meta.xml
<CustomField>
    <fullName>Actual_Weeks_to_Complete_Repair__c</fullName>
    <description>Formula-text field to calculate # weeks to repair the unit based off of when the item was approved for repair. Weeks are rounded to the nearest tenth. If the unit has been approved for repairs and is not completed, it will state &quot;Repair not complete&quot;. All other values would be null.</description>
    <formula>IF( 
AND(
NOT(ISBLANK(Arrival_Date__c)),
NOT(ISBLANK( Close_Date__c ))),
TEXT(ROUND(
((Close_Date__c - X52AActualPOApproval__c)/7)+0.04,
1)),
 
IF(
AND(
NOT(ISBLANK(Arrival_Date__c )),
ISBLANK(Close_Date__c)),
&quot;Repair Not Complete&quot;,
null)
)</formula>
    <label>Actual # Weeks to Complete Repair</label>
    <type>Text</type>
</CustomField>