force-app/main/default/objects/Work_Order__c/fields/AdagioInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>AdagioInvoiceNumber__c</fullName>
    <label>Welco Invoice #</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>