force-app/main/default/objects/Work_Order__c/fields/AdagioOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>AdagioOrderNumber__c</fullName>
    <label>Welco Order #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>