force-app/main/default/objects/Work_Order__c/fields/AgeDays__c.field-meta.xml
<CustomField>
    <fullName>AgeDays__c</fullName>
    <formula>IF(
ISBLANK(TEXT( CompleteandClose__c )),
TODAY() -  Arrival_Date__c,
 Close_Date__c - Arrival_Date__c )</formula>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>