force-app/main/default/objects/Work_Order__c/fields/AgeSystem__c.field-meta.xml
<CustomField>
    <fullName>AgeSystem__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (System)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>