force-app/main/default/objects/Work_Order__c/fields/Approval_Received_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Approval_Received_in_Days__c</fullName>
    <formula>IF( NOT( ISBLANK(Committed_Approval_Date__c) ) , 
Committed_Approval_Date__c - X4_5_Estimate_Actual_Completion__c ,
X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Received in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>