force-app/main/default/objects/Work_Order__c/fields/Arrived_from_paint__c.field-meta.xml
<CustomField>
    <fullName>Arrived_from_paint__c</fullName>
    <description>Date the equipment arrived at Welco from being sent to paint.</description>
    <label>Arrived from paint</label>
    <type>Date</type>
</CustomField>