force-app/main/default/objects/Work_Order__c/fields/Assigned_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Inside_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>