force-app/main/default/objects/Work_Order__c/fields/Barrel_Contamination_of_Grease__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Contamination_of_Grease__c</fullName>
    <label>Barrel - Contamination of Grease</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Leak - Lack of Lubrication due to Seals</fullName>
            </value>
            <value>
                <fullName>Leak - Brine Intrusion into the Barrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>