force-app/main/default/objects/Work_Order__c/fields/Bearing_Ceased__c.field-meta.xml
<CustomField>
    <fullName>Bearing_Ceased__c</fullName>
    <label>Bearing - Ceased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Out of Balance - Shaft Running Offset (bearing or misalignment)</fullName>
            </value>
            <value>
                <fullName>Wearing - Dirt in the Bearing</fullName>
            </value>
            <value>
                <fullName>Etching - Improper Installation of Bearings</fullName>
            </value>
            <value>
                <fullName>Overheating - Lack of Lubrication</fullName>
            </value>
            <value>
                <fullName>Overheating - Excessive Lubrication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>