force-app/main/default/objects/Work_Order__c/fields/Box_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Link__c</fullName>
    <label>Customer Shared Box Link</label>
    <type>Url</type>
</CustomField>