force-app/main/default/objects/Work_Order__c/fields/Case_Job__c.field-meta.xml
<CustomField>
    <fullName>Case_Job__c</fullName>
    <description>Job Numbers from the Cases Object for the new Work Order Object.</description>
    <label>Case Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>