force-app/main/default/objects/Work_Order__c/fields/Casing_Gaskets_Leak__c.field-meta.xml
<CustomField>
    <fullName>Casing_Gaskets_Leak__c</fullName>
    <label>Casing Gaskets - Leak</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Leak - Casing Gasket Defects, Permitting Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>