force-app/main/default/objects/Work_Order__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <label>Circuit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cyclone Feed</fullName>
            </value>
            <value>
                <fullName>Heavy Media</fullName>
            </value>
            <value>
                <fullName>Tailings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>