force-app/main/default/objects/Work_Order__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Typically entered based on the invoice date by Inside Sales</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>