force-app/main/default/objects/Work_Order__c/fields/Committed_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Approval_Date__c</fullName>
    <description>The date that the Work Order has been committed, but awaiting PO</description>
    <label>4.2 Committed Approval Date</label>
    <type>Date</type>
</CustomField>