force-app/main/default/objects/Work_Order__c/fields/Committed_Consigned__c.field-meta.xml
<CustomField>
    <fullName>Committed_Consigned__c</fullName>
    <label>Committed/Consigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>