force-app/main/default/objects/Work_Order__c/fields/Committed_Consigned_Item_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Consigned_Item_Ship_Date__c</fullName>
    <description>Actual ship date for Committed/Consigned items as requested by Mosaic in March 2018 for the RS template</description>
    <label>Committed/Consigned Item Ship Date</label>
    <type>Date</type>
</CustomField>