force-app/main/default/objects/Work_Order__c/fields/CompleteandClose__c.field-meta.xml
<CustomField>
    <fullName>CompleteandClose__c</fullName>
    <label>6. Complete and Close</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repaired, Send back to Customer</fullName>
            </value>
            <value>
                <fullName>Not Repaired, Scrap at Welco</fullName>
            </value>
            <value>
                <fullName>Not Repaired, Send back to Customer</fullName>
                <label>Not Repaired, Send Back to Customer</label>
            </value>
            <value>
                <fullName>Not Repaired, Customer to Recycle Parts</fullName>
            </value>
            <value>
                <fullName>Not Repaired, Ordered New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>