force-app/main/default/objects/Work_Order__c/fields/Component_Category__c.field-meta.xml
<CustomField>
    <fullName>Component_Category__c</fullName>
    <formula>CASE( RecordType.DeveloperName,
&quot;Pump_Horizontal&quot;,&quot;Pump&quot;,
&quot;Pump_Submersible&quot;,&quot;Pump&quot;,
&quot;Pump_Vertical&quot;,&quot;Pump&quot;,
&quot;Valve&quot;, &quot;Valve&quot;,
&quot;Cyclone&quot;,&quot;Cyclone&quot;,
&quot;X3rdPartyRepairOther&quot;, &quot;&lt;Other&gt;&quot;,
null)</formula>
    <label>Component Category</label>
    <type>Text</type>
</CustomField>