force-app/main/default/objects/Work_Order__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>Date the work order was created</description>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>