force-app/main/default/objects/Work_Order__c/fields/Customer_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset_ID__c</fullName>
    <label>Customer Asset ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>