force-app/main/default/objects/Work_Order__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact you are requesting information from</description>
    <inlineHelpText>Primary contact to whom you are requesting information.</inlineHelpText>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (Customer Contact)</relationshipLabel>
    <relationshipName>Work_OrdersInfo</relationshipName>
    <type>Lookup</type>
</CustomField>