force-app/main/default/objects/Work_Order__c/fields/Customer_Item__c.field-meta.xml
<CustomField>
    <fullName>Customer_Item__c</fullName>
    <label>Customer Item #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>