force-app/main/default/objects/Work_Order__c/fields/Date_Approved_for_Repair__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_for_Repair__c</fullName>
    <description>Formula-Date field consolidating dates from 5.2A (approved) and 5.2B (declined) to simplify field for Mosaic&apos;s RS Template. Mosaic would like to see the date they responded regardless of whether they approve or decline the estimate, as per Tracy Farkus.</description>
    <formula>IF(NOT(ISBLANK(X52AActualPOApproval__c)), X52AActualPOApproval__c,
IF(NOT(ISBLANK(X5_2B_Actual_PO_Decline__c)), X5_2B_Actual_PO_Decline__c,
IF(NOT(ISBLANK(Committed_Approval_Date__c)), Committed_Approval_Date__c, null)))</formula>
    <label>Date Approved for Repair</label>
    <type>Date</type>
</CustomField>