force-app/main/default/objects/Work_Order__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <description>If the quote was not provided within Mosaic&apos;s target KPI of 5, then calculate for the difference in days to determine # days late for Mosaic&apos;s RS Template</description>
    <formula>IF(
 Provided_Within_Target__c = &quot;N&quot;, 
 VALUE(Days_to_Quote__c) - 5,
null)</formula>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>