force-app/main/default/objects/Work_Order__c/fields/Days_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Quote__c</fullName>
    <description>Based on time to quote (business days) - number values appear for completed quotes otherwise &quot;Waiting for Quote&quot; as per Mosaic&apos;s RS Template</description>
    <formula>IF(
AND(
NOT(ISBLANK(X4_5_Estimate_Actual_Completion__c)),
NOT(ISBLANK(Arrival_Date__c ))
),
TEXT( Time_to_Quote__c ),

IF(AND( ISBLANK(TEXT(CompleteandClose__c)),ISBLANK(X4_5_Estimate_Actual_Completion__c)),
&quot;Waiting on Quote&quot;, null)
)</formula>
    <label>Days to Quote</label>
    <type>Text</type>
</CustomField>