force-app/main/default/objects/Work_Order__c/fields/Days_to_Receive_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Receive_Approval__c</fullName>
    <description>Based on time to approve (business days) - number values exist for completed quotes otherwise &quot;Waiting for Approval&quot; as per Mosaic&apos;s RS Template. Historic work orders with no estimate completion date will be null.</description>
    <label>Days to Receive Approval</label>
    <length>30</length>
    <type>Text</type>
</CustomField>