force-app/main/default/objects/Work_Order__c/fields/Engineering_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Inspection__c</fullName>
    <label>Engineering Inspection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>