force-app/main/default/objects/Work_Order__c/fields/Engineering_Metric__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Metric__c</fullName>
    <description>X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c</description>
    <formula>CASE(MOD(X3A_4_Inspect_Actual_Completion__c- DATE(1985,6,24),7),
0 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c- X3A_4_Inspect_Actual_Completion__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( X2_4_Final_Engineering_Report_Uploaded__c - X3A_4_Inspect_Actual_Completion__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineering Metric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>