force-app/main/default/objects/Work_Order__c/fields/Equipment_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Arrival_Date__c</fullName>
    <description>The date the equipment arrives at Welco.</description>
    <label>Equipment Arrival DateOLD</label>
    <type>Date</type>
</CustomField>