force-app/main/default/objects/Work_Order__c/fields/Equipment_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Arrived__c</fullName>
    <formula>IF(NOT(ISBLANK(Equipment_Arrival_Date__c)),
(Equipment_Arrival_Date__c),(Arrival_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Arrived at Welco</label>
    <type>Date</type>
</CustomField>