force-app/main/default/objects/Work_Order__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <description>Description of the Equipment in for Repair</description>
    <label>Equipment Description</label>
    <type>TextArea</type>
</CustomField>