force-app/main/default/objects/Work_Order__c/fields/Equipment_Received__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Received__c</fullName>
    <description>Field used to gather dates from 2 fields for Mosaic Reporting</description>
    <label>Equipment Received</label>
    <type>Date</type>
</CustomField>