force-app/main/default/objects/Work_Order__c/fields/Exceeded_Maximum_Wear_Life__c.field-meta.xml
<CustomField>
    <fullName>Exceeded_Maximum_Wear_Life__c</fullName>
    <label>Exceeded Maximum Wear Life</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>