force-app/main/default/objects/Work_Order__c/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>Date of when unit has been repaired and will be shipped out. This original expected ship date is required for Mosaic&apos;s RS template. Any date revisions still need to be communicated to the buyers, but the original expected ship date must be used. Any date revisions can be indicated as part of the notes in the field “Reason for Late Delivery”, which is a free-text field, as per Tracy Farkus

Completion date is more reflective as we don&apos;t always know when the item will be shipped out as per Liz.</description>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>