force-app/main/default/objects/Work_Order__c/fields/Expected_RepairCompletionTime_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Expected_RepairCompletionTime_Weeks__c</fullName>
    <description>Formula-Text field for Unit Expected Repair Completion in Weeks as required by Mosaic&apos;s RS Template. Based off of the expected ship date and approval date. Weeks is rounded to the nearest tenth.</description>
    <formula>IF(
AND(
NOT(ISBLANK( Arrival_Date__c )),
NOT(ISBLANK( Expected_Completion_Date__c )),
NOT(ISBLANK( X52AActualPOApproval__c   ))
),
TEXT(ROUND(((Expected_Completion_Date__c - X52AActualPOApproval__c )/7)+0.04,1)),
/*Projected Repair Completion Date vs Day PO was approved */

IF(
AND(
NOT(ISBLANK( Arrival_Date__c )),
ISBLANK(TEXT( CompleteandClose__c )),
ISBLANK(Expected_Completion_Date__c)
),
&quot;&quot;,
null
)
)</formula>
    <label>Expected Repair Completion Time (Weeks)</label>
    <type>Text</type>
</CustomField>