force-app/main/default/objects/Work_Order__c/fields/Failure_Mode__c.field-meta.xml
<CustomField>
    <fullName>Failure_Mode__c</fullName>
    <label>Failure Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Wear (ideal failure mode)</fullName>
            </value>
            <value>
                <fullName>Seal Failure (water flush)</fullName>
            </value>
            <value>
                <fullName>Seal Failure (centrifugal)</fullName>
            </value>
            <value>
                <fullName>Seal Failure (mechanical seal)</fullName>
            </value>
            <value>
                <fullName>Over-adjusted Wear Ring</fullName>
            </value>
            <value>
                <fullName>Back Liner Wear</fullName>
            </value>
            <value>
                <fullName>Impeller Wear</fullName>
            </value>
            <value>
                <fullName>Impeller Fracture</fullName>
            </value>
            <value>
                <fullName>Suction Liner Wear</fullName>
            </value>
            <value>
                <fullName>Bearing Failure</fullName>
            </value>
            <value>
                <fullName>Volute Liner Wear</fullName>
            </value>
            <value>
                <fullName>Power Frame Fracture</fullName>
            </value>
            <value>
                <fullName>Casing Fracture</fullName>
            </value>
            <value>
                <fullName>Discharge Fracture</fullName>
            </value>
            <value>
                <fullName>Suction Liner Fracture</fullName>
            </value>
            <value>
                <fullName>Wear Ring Fracture</fullName>
            </value>
            <value>
                <fullName>Back Liner Corrosion &amp; Erosion</fullName>
            </value>
            <value>
                <fullName>Wet End Seal Failure</fullName>
            </value>
            <value>
                <fullName>Shaft Fracture</fullName>
            </value>
            <value>
                <fullName>Impeller Corrosion</fullName>
            </value>
            <value>
                <fullName>Suction Liner Corrosion</fullName>
            </value>
            <value>
                <fullName>Back Liner Corrosion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>