force-app/main/default/objects/Work_Order__c/fields/Impeller_Failure_to_Transfer_Energy__c.field-meta.xml
<CustomField>
    <fullName>Impeller_Failure_to_Transfer_Energy__c</fullName>
    <label>Impeller - Failure to Transfer Energy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Cavitation - Pump not Primed</fullName>
            </value>
            <value>
                <fullName>Cavitation - Suction Lift too High</fullName>
            </value>
            <value>
                <fullName>Cavitation - Intake Pipe Insufficiently Submerged</fullName>
            </value>
            <value>
                <fullName>Cavitation - Intake Pipe Diameter too Small or Length Intake Pipe too Long</fullName>
            </value>
            <value>
                <fullName>Crack/Erosion/Cavitation - Impeller Damaged or Worn</fullName>
            </value>
            <value>
                <fullName>Crack/Erosion - Impeller Rubbing on Volute</fullName>
            </value>
            <value>
                <fullName>Crack/Erosion - Impeller out of Balance, causing Vibration (Casting)</fullName>
            </value>
            <value>
                <fullName>Out of Balance - Foreign Matter in Impeller</fullName>
            </value>
            <value>
                <fullName>Out of Balance - Loose Shaft/Wear Ring Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>