force-app/main/default/objects/Work_Order__c/fields/Inspection_Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Report_Completed__c</fullName>
    <label>6D. Inspection Report Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>