force-app/main/default/objects/Work_Order__c/fields/Internal_Work_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Work_Order_Notes__c</fullName>
    <label>Internal Work Order Notes</label>
    <type>TextArea</type>
</CustomField>