force-app/main/default/objects/Work_Order__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <description>Identifies if the current user is the account owner of the work order</description>
    <formula>IF( Account__r.OwnerId = $User.Id, True, False)</formula>
    <label>AccountOwnerIsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>