force-app/main/default/objects/Work_Order__c/fields/Job_Quote__c.field-meta.xml
<CustomField>
    <fullName>Job_Quote__c</fullName>
    <description>Combined Work Order # and Welco Estimate # as required by Mosaic&apos;s RS report template</description>
    <formula>IF(NOT(ISBLANK(Quote_Number__c)),Name+&quot; / &quot;+Quote_Number__c,Name)</formula>
    <label>Job/Quote #</label>
    <type>Text</type>
</CustomField>