force-app/main/default/objects/Work_Order__c/fields/Last_Repair_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Repair_Date__c</fullName>
    <label>Last Repair Date</label>
    <type>Date</type>
</CustomField>