force-app/main/default/objects/Work_Order__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Ensure proper formatting.
Example: K2 Mill - Esterhazy</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colonsay - East Mill</fullName>
            </value>
            <value>
                <fullName>Colonsay - Mill</fullName>
            </value>
            <value>
                <fullName>Colonsay - Surface</fullName>
            </value>
            <value>
                <fullName>K1 Mill - Esterhazy</fullName>
            </value>
            <value>
                <fullName>K2 Mill - Esterhazy</fullName>
            </value>
            <value>
                <fullName>K2 Mine - Esterhazy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>